<resources>
    <string name="app_name">微笑天天</string>
    <string name="action_settings">Settings</string>
    <string name="about_activity_lable">关于</string>
    <string name="accident_display_activity_lable">意外消息</string>
    <string name="accident_history_activity_lable">意外消息</string>
    <string name="add_friend_activity_lable">好友</string>
    <string name="add_seniors_activity_lable">添加被关注人</string>
    <string name="auto_message_display_activity_lable">自动消息</string>
    <string name="auto_message_edit_activity_lable">编辑自动消息</string>
    <string name="change_password_activity_lable">修改密码</string>
    <string name="change_senior_phone_activity_lable">修改被关注人手机号码</string>
    <string name="change_child_phone_activity_lable">修改手机号码</string>
    <string name="common_setup_activity_lable">通用设置</string>
    <string name="emergence_info_activity_lable">编辑紧急消息</string>
    <string name="emergence_notice_activity_lable">紧急通知</string>
    <string name="history_activity_lable">历史</string>
    <string name="Login_activity_lable">登录</string>
    <string name="main_activity_lable">微笑天天</string>
    <string name="message_activity_lable">消息</string>
    <string name="message_history_activity_lable">消息历史</string>
    <string name="person_info_activity_lable">个人信息</string>
    <string name="register_senior_activity_lable">注册被关注人</string>
    <string name="register_user_activity_lable">注册</string>
    <string name="senior_info_activity_lable">被关注人信息</string>
    <string name="senior_info_mod_activity_lable">被关注人信息修改</string>
    <string name="setup_activity_lable">设置</string>
    <string name="sos_activity_lable">求救消息</string>
    <string name="warning_activity_lable">警告</string>
    <string name="setup_lable">设置</string>
    <string name="emergency_veterinary_lable">紧急医疗卡</string>
    <string name="common_message_display_lable">常用消息</string>
    <string name="parent_track_activity_lable">轨迹查询</string>
    <string name="cancel">取消</string>
    <string name="reg_title">注册页面</string>
    <string name="input_error">输入有误，请重新输入</string>
    <string name="input_nothing_error">请正确输入</string>
    <string name="input_long_error">输入字符过长，请正确输入</string>
    <string name="input_short_error">输入字符过短，请正确输入</string>
    <string name="logout">注销</string>
    <string name="store">保存</string>
    <string name="sure">确定</string>
    <string name="unknown">unknown</string>
    <string name="no_name">匿名</string>
    <string name="no_info">未知</string>
    <string name="time_delay_text">秒后可再次点击</string>
    <string name="time_second">秒</string>
    <string name="agree_to">同意</string>
    <string name="refuse_to">拒绝</string>
    <string name="refresh_text">刷新</string>
    <string name="login">账号</string>
    <string name="password">密码</string>
    <string name="remember_password">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="register">注册</string>
    <string name="login_botton">登录</string>
    <string name="login_dis">请输入用户名</string>
    <string name="password_dis">请输入用户密码</string>
    <string name="login_success">登陆成功</string>
    <string name="login_info_error">账户无匹配，请确认登陆码与父母码是否正确</string>
    <string name="login_incredible_error">出错了！请重试。</string>
    <string name="login_net_error">网络连接故障，请检查网络连接情况.</string>
    <string name="login_forget_password">忘记密码?</string>
    <string name="login_dialog_netwait_title">登录</string>
    <string name="login_dialog_netwait_content">正在登录，请稍后</string>
    <string name="history_text">紧急\n医疗\n卡</string>
    <string name="setup_text">设置</string>
    <string name="standing">站立</string>
    <string name="walking">步行</string>
    <string name="idle">静止</string>
    <string name="running">跑步</string>
    <string name="message">消息</string>
    <string name="sport_detection_content">运动\n检测</string>
    <string name="sport_detection_off">运动\n检测\n未开</string>
    <string name="emergency_call_not_start">紧急电话功能未开启</string>
    <string name="emergency_call_title">紧急电话</string>
    <string name="message_history">消息</string>
    <string name="btn_page_0">状态</string>
    <string name="btn_page_1">消息</string>
    <string name="btn_page_2">运动</string>
    <string name="btn_page_3">设置</string>
    <string name="parent_rightbtn_text">轨迹</string>
    <string name="parent_centerbtn_text">未知关注人</string>
    <string name="parent_noselectsenior_error">请正确选择被关注人后再尝试</string>
    <string name="parent_state_run">运动状态:跑步</string>
    <string name="parent_state_walk">运动状态:走步</string>
    <string name="parent_state_stand">运动状态:静止</string>
    <string name="parent_state_unknown">运动状态:未知</string>
    <string name="parenttrack_rightbtn_text">日历</string>
    <string name="parenttrack_leftbtn_text">刷新</string>
    <string name="parenttrack_noseniorinfo_error">关注人信息接收失败</string>
    <string name="message_common_msg_0">别忘了吃药</string>
    <string name="message_common_msg_1">天凉了，多穿点</string>
    <string name="message_common_msg_2">可能会下雨，出门带雨伞</string>
    <string name="message_edit_msg">编辑消息</string>
    <string name="message_send">发送</string>
    <string name="message_history_text">历史消息查看</string>
    <string name="message_circle_msg">设置自动消息</string>
    <string name="message_edit_short_error">请输入信息内容</string>
    <string name="message_automsg_button">自动消息</string>
    <string name="msg_centertitle_text">消息</string>
    <string name="history_runtime_title">跑步时间</string>
    <string name="history_standtime_title">静止时间</string>
    <string name="history_walktime_title">走步时间</string>
    <string name="history_abnormity_title">异常消息</string>
    <string name="history_calorie_title">能量消耗</string>
    <string name="history_message_title">今日推送</string>
    <string name="history_choice_date">选择日期</string>
    <string name="history_date_title">日期</string>
    <string name="history_calorie_unit">卡路里</string>
    <string name="history_message_unit">条消息</string>
    <string name="history_senior_choice_error">请正确选择被关注人</string>
    <string name="history_gettrack_text">轨迹查询</string>
    <string name="history_suggest_much">运动量过大</string>
    <string name="history_suggest_less">需继续运动</string>
    <string name="history_suggest_normal">运动量适中</string>
    <string name="history_sport_time">运动时间</string>
    <string name="history_refresh_nouser_error">请正确选择用户后重试</string>
    <string name="emergency_veterinary_title">紧急医疗卡</string>
    <string name="setup_title">设置</string>
    <string name="setup_preferences_title">用户偏好设置</string>
    <string name="setup_login_title">登录设置</string>
    <string name="setup_logout">注销</string>
    <string name="setup_assist_care_btntext">自动消息</string>
    <string name="setup_person_info_btntext">个人信息</string>
    <string name="setup_seniors_info_btntext">被关注人信息</string>
    <string name="setup_emergence_info_btntext">紧急通告消息</string>
    <string name="setup_common_info_btntext">通用</string>
    <string name="setup_about_btntext">关于</string>
    <string name="setup_blood_type_a">A</string>
    <string name="setup_blood_type_b">B</string>
    <string name="setup_blood_type_o">O</string>
    <string name="setup_blood_type_ab">AB</string>
    <string name="setup_blood_type_na">未知</string>
    <string name="setup_input_hint_name">请输入您的姓名</string>
    <string name="setup_input_hint_nick">请输入您的昵称</string>
    <string name="setup_input_hint_height">请输入您的身高，单位为厘米</string>
    <string name="setup_input_hint_weight">请输入您的体重，单位为千克</string>
    <string name="setup_input_hint_address">请输入您的地址</string>
    <string name="setup_input_hint_allergy">请输入您的过敏反应</string>
    <string name="setup_input_hint_medical">请输入您的用药历史</string>
    <string name="setup_input_cardid_error">请正确输入身份证号</string>
    <string name="setup_input_phone_error">请正确输入手机号码</string>
    <string name="setup_accident_btntext">他人求助历史信息</string>
    <string name="setup_sos_btntext">被关注人跌倒历史信息</string>
    <string name="warning_default_title">警告</string>
    <string name="warning_delete_seniors_title">取消关注</string>
    <string name="warning_delete_seniors_content_head_text">确定要取消对 </string>
    <string name="warning_delete_seniors_content_end_text"> 的关注?</string>
    <string name="warning_resotre_factory_title">还原出厂设置</string>
    <string name="warning_resotre_factory_content">还原出厂设置会删除本软件所有的数据和用户偏好信息，是否确定还原出厂设置？</string>
    <string name="warning_system_message_title">微笑天天 系统消息</string>
    <string name="warning_accident_message_title">意外报警</string>
    <string name="warning_accident_message_content_front">微笑天天系统检测到您的被关注人 </string>
    <string name="warning_accident_message_content_mid"> 在  </string>
    <string name="warning_accident_message_content_behind"> 附近出现意外  </string>
    <string name="warning_sos_message_title">微笑天天 求救信息</string>
    <string name="warning_sos_message_content">微笑天天 检测到有人在您附近出现意外，请帮忙救助</string>
    <string name="warning_sos_message_user_content">监护人留言：</string>
    <string name="warning_attention_message_title">请求关注</string>
    <string name="warning_attention_message_content">请求关注您的被关注人：</string>
    <string name="warning_attention_message_content_agree">, 是否同意？</string>
    <string name="warning_logout_title">退出</string>
    <string name="warning_logout_text">注销不会删除历史资料，下次登录后可继续使用</string>
    <string name="warning_logout_sure_btn">退出登录</string>
    <string name="warning_attention_request_title">申请关注</string>
	<string name="accident_display_acc_left_text">求助</string>
	<string name="accident_display_acc_right_text">位置</string>
	<string name="accident_display_sos_left_text"></string>
	<string name="accident_display_sos_right_text">求助消息</string>
	<string name="accident_display_no_content_error">求助消息</string>
	<string name="accident_display_sendhelp_success">求助消息发送成功</string>
	<string name="accident_display_sendhelp_unsuccess">求助消息发送失败</string>
	<string name="accident_display_exceeds_timedelay_error">已超过求救信息时限</string>
    <string name="fall_down_warning_title">跌倒报警</string>
    <string name="fall_down_warning_content">检测到跌倒</string>
    <string name="message_default_title">微笑天天消息</string>
    <string name="message_accident_button">异常消息历史</string>
    <string name="common_sure">确定</string>
    <string name="common_password_change_button_text">修改密码</string>
    <string name="common_seniorphone_change_button_text">修改被关注人手机号</string>
    <string name="common_clear_button_text">还原出厂设置</string>
    <string name="addsenior_cardid_title">请输入被关注人身份证号</string>
    <string name="addsenior_senior_phone_title">请输入被关注人手机号</string>
    <string name="addsenior_mainchild_phone_title">请输入第一监护人的手机号码</string>
    <string name="addsenior_no_seniorphone_error">被关注人的手机号码不可为空</string>
    <string name="regsenior_name_title">请输入被注册人姓名</string>
    <string name="regsenior_nick_title">请输入被注册人昵称</string>
    <string name="regsenior_height_title">请输入被注册人身高(cm)</string>
    <string name="regsenior_weight_title">请输入被注册人体重(kg)</string>
    <string name="regsenior_address_title">请输入被注册人住址</string>
    <string name="regsenior_cardid_title">请输入被注册人身份证号</string>
    <string name="regsenior_allergic_title">请输入被注册人的过敏反应</string>
    <string name="regsenior_medical_title">请输入被注册人的用药情况</string>
    <string name="regsenior_phone_title">请输入被注册人的手机号</string>
    <string name="regsenior_verification_title">请输入手机验证码</string>
    <string name="regsenior_sendverification_btntitle">发送手机验证码</string>
    <string name="regsenior_birth_title">被注册人生日:</string>
    <string name="regsenior_code_title">请输入被注册人6位登陆密码</string>
    <string name="automsgedit_time_title">请选择发送时间</string>
    <string name="seniorinfo_add_senior_btn_text">添加已注册被关注人</string>
    <string name="reguser_nick_title">请输入昵称</string>
    <string name="reguser_phone_title">请输入注册的手机号码</string>
    <string name="reguser_password_title">请输入密码</string>
    <string name="reguser_password_again_title">请再次输入密码</string>
    <string name="reguser_cardid_title">请输入身份证号</string>
    <string name="reguser_name_title">请输入姓名</string>
    <string name="reguser_register_btn_text">注册</string>
    <string name="changephone_phone_edit_text">请输入新手机号码</string>
</resources>