<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dip"
        android:paddingRight="16dip" >

        <Spinner
            android:id="@+id/automsgedit_user_choice_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </Spinner>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dip" />

        <EditText
            android:id="@+id/automsgedit_content_edit"
            android:layout_width="match_parent"
            android:layout_height="120dip"
            android:background="@drawable/onerow_option_selector"
            android:hint="@string/message_edit_msg"
            android:maxLength="256" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dip"
            android:text="@string/automsgedit_time_title"
            android:textColor="@color/gray" />

        <DatePicker
            android:id="@+id/automsgedit_date_datepicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:calendarViewShown="false" >
        </DatePicker>

        <TimePicker
            android:id="@+id/automsgedit_time_timepicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/automsgedit_sure_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/onerow_option_selector"
                android:text="@string/sure" />

            <Button
                android:id="@+id/automsgedit_cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/onerow_option_selector"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>