<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical"
    android:paddingBottom="16dip"
    android:paddingLeft="16dip"
    android:paddingRight="16dip"
    android:paddingTop="16dip" >

    <Spinner
        android:id="@+id/message_choice_user"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </Spinner>

    <View
        android:layout_width="fill_parent"
        android:layout_height="16dip" >
    </View>

    <EditText
        android:id="@+id/message_edit_msg"
        android:layout_width="fill_parent"
        android:layout_height="180dip"
        android:background="@drawable/onerow_option_selector"
        android:hint="@string/message_edit_msg" >
    </EditText>

    <View
        android:layout_width="fill_parent"
        android:layout_height="20dip" >
    </View>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/message_common_message"
            android:layout_width="67dip"
            android:layout_height="35dip"
            android:background="@drawable/anti_btn"
            android:scaleType="fitXY"
            android:src="@drawable/ic_menu_sort_by_size" >
        </ImageView>

        <Button
            android:id="@+id/message_send"
            android:layout_width="fill_parent"
            android:layout_height="35dip"
            android:background="@drawable/anti_btn"
            android:text="@string/message_send"
            android:textColor="@drawable/anti_btn"
            android:textSize="15dip" >
        </Button>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0" >
    </View>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/message_histoty"
            android:layout_width="fill_parent"
            android:layout_height="35dip"
            android:layout_weight="1.0"
            android:background="@drawable/anti_btn"
            android:text="@string/message_history_text"
            android:textColor="@drawable/anti_btn"
            android:textSize="15dip" >
        </Button>

        <Button
            android:id="@+id/message_auto_msg"
            android:layout_width="fill_parent"
            android:layout_height="35dip"
            android:layout_weight="1.0"
            android:background="@drawable/anti_btn"
            android:text="@string/message_circle_msg"
            android:textColor="@drawable/anti_btn"
            android:textSize="15dip" >
        </Button>
    </LinearLayout>

</LinearLayout>